--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
   <!-- Navbar -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light px-5 py-3 border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light px-5 border-bottom">
       <div class="container-fluid">
         <a class="navbar-brand fs-1" href="index.html"><span class="text-primary">Eitr </span>Alward</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
