--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 <body>
   <!-- Navbar -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light px-5 border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light py-2 px-5 border-bottom">
       <div class="container-fluid">
-        <a class="navbar-brand fs-1" href="index.html"><span class="text-primary">Eitr </span>Alward</a>
+        <a class="navbar-brand fs-2 ms-5" href="index.html"><span class="text-primary">Eitr </span>Alward</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
