--- a/services.html
+++ b/services.html
@@ -30,15 +30,15 @@
 <body>
   <!-- Navbar -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light px-5 py-3 border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light px-5 py-2 border-bottom">
       <div class="container-fluid">
-        <a class="navbar-brand fs-1" href="index.html"><span class="text-primary">Eitr </span>Alward</a>
+        <a class="navbar-brand fs-2 ms-5" href="index.html"><span class="text-primary">Eitr </span>Alward</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-4 text-center">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5 text-center">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
