--- a/index.html
+++ b/index.html
@@ -236,19 +236,19 @@
         <div class="col-12 col-md-4">
           <div class="stat-box">
             <div class="stat-number display-6 fw-bold">2006</div>
-            <div class="stat-label text-muted">Established</div>
+            <div class="stat-label text-danger">Established</div>
           </div>
         </div>
         <div class="col-12 col-md-4">
           <div class="stat-box">
             <div class="stat-number display-6 fw-bold">500+</div>
-            <div class="stat-label text-muted">Successful Projects</div>
+            <div class="stat-label text-primary">Successful Projects</div>
           </div>
         </div>
         <div class="col-12 col-md-4">
           <div class="stat-box">
             <div class="stat-number display-6 fw-bold">120+</div>
-            <div class="stat-label text-muted">Team Members</div>
+            <div class="stat-label text-warning">Team Members</div>
           </div>
         </div>
       </div>
