--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
   <!-- Banner Section -->
   <section class="specialties-section text-center text-white p-5" style="background-image: url('img/team1.jpg');">
     <div class="container">
-      <p class="text-uppercase mb-2 fs-6 text-wrap">Our Specialties</p>
+      <p class="text-uppercase mb-2 fs-5 text-wrap text-danger">Our Specialties</p>
       <h2 class="specialties-heading fw-bold fs-3 fs-md-2 text-wrap">
-        Empowering success with <span class="text-danger">expert guidance</span>
+        Empowering success with <span>expert guidance</span>
       </h2>
       <div class="row mt-5 gy-4 gx-3">
         <div class="col-12 col-md-4">
